--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -2,38 +2,41 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
+
         <item
             android:id="@+id/nav_profile"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/card"
             android:title="Profile" />
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/house"
             android:title="Home" />
         <item
             android:id="@+id/nav_workout"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/plan"
             android:title="Workout" />
         <item
             android:id="@+id/nav_meal"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/name_food_24"
             android:title="Meal" />
         <item
             android:id="@+id/nav_exercise"
-            android:icon="@drawable/ic_menu_manage"
+            android:icon="@drawable/excer"
             android:title="Exercise" />
         <item
             android:id="@+id/nav_statistic"
-            android:icon="@drawable/ic_menu_manage"
+            android:icon="@drawable/analytics"
             android:title="Statistic" />
     </group>
 
     <item android:title="Information">
         <menu>
             <item
+                android:icon="@drawable/curriculum"
                 android:id="@+id/nav_class"
                 android:title="Lap trinh huong di dong nhom 4" />
             <item
+                android:icon="@drawable/information"
                 android:id="@+id/nav_group"
                 android:title="Thuc hien: Nhom 5" />
         </menu>
