--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -95,7 +95,8 @@
         android:layout_above="@id/bottom_bar"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:paddingTop="10dp">
+        android:paddingTop="10dp"
+        android:visibility="visible">
 
     </FrameLayout>
 
