--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -28,7 +28,7 @@
                 android:layout_gravity="left|center_vertical"
                 android:layout_marginLeft="10dp"
                 android:src="@drawable/back_1"
-                android:visibility="gone" />
+                android:visibility="invisible" />
 
             <TextView
                 android:id="@+id/tv_title_actionbar"
@@ -48,7 +48,7 @@
                 android:layout_gravity="right|center_vertical"
                 android:layout_marginRight="10dp"
                 android:src="@drawable/plus_1"
-                android:visibility="gone" />
+                android:visibility="invisible" />
 
         </android.support.v7.widget.Toolbar>
 
