--- a/app/src/main/res/layout/fragment_workout_exercise.xml
+++ b/app/src/main/res/layout/fragment_workout_exercise.xml
@@ -12,18 +12,22 @@
 
     </ListView>
 
-    <TextView
-        android:id="@+id/tv_workout_exercise_kalo"
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/btn_workout_exercise_add"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:textSize="16sp" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="5dp"
+        android:text="Add to practice"
+        android:textSize="16sp"
+        android:visibility="gone" />
 
     <ExpandableListView
         android:id="@+id/exListview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/tv_workout_exercise_kalo"
+        android:layout_above="@+id/btn_workout_exercise_add"
         android:childDivider="#00000000"
         android:divider="@color/colorPrimary"
         android:dividerHeight="1dp"
