--- a/app/src/main/res/layout/dialog_edit_food.xml
+++ b/app/src/main/res/layout/dialog_edit_food.xml
@@ -170,7 +170,7 @@
 
                 <Button
                     android:id="@+id/bt_dialog_cancel"
-
+                    android:textColor="@color/colorWhite"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/button"
@@ -179,7 +179,7 @@
                 <Button
                     android:id="@+id/bt_dialog_add"
                     android:layout_width="wrap_content"
-
+                    android:textColor="@color/colorWhite"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:background="@drawable/button"
