--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="colorGray3">#e6e6e6</color>
     <color name="colorGrayText">#666666</color>
     <color name="colorBlack">#000000</color>
+    <color name="colorRed">#FFFF4444</color>
     <color name="colorOre">#ff7733</color>
     <color name="textDark">#3b3b3b</color>
     <color name="pink">#FF3399</color>
