--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -12,6 +12,16 @@
         android:layout_marginTop="10dp"
         android:src="@drawable/edit" />
 
+    <ImageView
+        android:id="@+id/iv_profile_save"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/edit"
+        android:visibility="gone" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -73,6 +83,18 @@
                     android:text="Minh min"
                     android:textColor="@color/textDark"
                     android:textSize="16sp" />
+
+                <EditText
+                    android:id="@+id/edt_profile_name_content"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:gravity="right"
+                    android:hint="Your Name"
+                    android:inputType="text"
+                    android:textColor="@color/textDark"
+                    android:textSize="16sp"
+                    android:visibility="gone" />
             </LinearLayout>
 
             <LinearLayout
@@ -99,6 +121,18 @@
                     android:text="18"
                     android:textColor="@color/textDark"
                     android:textSize="16sp" />
+
+                <EditText
+                    android:id="@+id/edt_profile_age"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:gravity="right"
+                    android:hint="Your Age"
+                    android:inputType="number"
+                    android:textColor="@color/textDark"
+                    android:textSize="16sp"
+                    android:visibility="gone" />
             </LinearLayout>
 
             <LinearLayout
@@ -127,6 +161,18 @@
                     android:text="abc@gmail.com"
                     android:textColor="@color/textDark"
                     android:textSize="16sp" />
+
+                <EditText
+                    android:id="@+id/edt_profile_email"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:gravity="right"
+                    android:hint="Your Email"
+                    android:inputType="textEmailAddress"
+                    android:textColor="@color/textDark"
+                    android:textSize="16sp"
+                    android:visibility="gone" />
             </LinearLayout>
 
             <LinearLayout
@@ -150,6 +196,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
+                    android:clickable="false"
                     android:gravity="right"
                     android:orientation="horizontal"
                     android:textSize="16sp">
@@ -213,7 +260,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:drawableLeft="@drawable/kilo"
-                    android:text=" Weight"
+                    android:text=" Weight(kg)"
                     android:textColor="@color/colorBlack"
                     android:textSize="16sp" />
 
@@ -223,9 +270,20 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
                     android:gravity="right"
-                    android:text="60kg"
+                    android:text="60"
                     android:textColor="@color/textDark"
                     android:textSize="16sp" />
+
+                <EditText
+                    android:id="@+id/edt_profile_weight"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:gravity="right"
+                    android:hint="kg"
+                    android:textColor="@color/textDark"
+                    android:textSize="16sp"
+                    android:visibility="gone" />
             </LinearLayout>
 
             <LinearLayout
@@ -241,7 +299,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:drawableLeft="@drawable/height_1"
-                    android:text=" Height"
+                    android:text=" Height(cm)"
                     android:textColor="@color/colorBlack"
                     android:textSize="16sp" />
 
@@ -251,9 +309,22 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
                     android:gravity="right"
-                    android:text="165cm"
+                    android:inputType="number"
+                    android:text="165"
                     android:textColor="@color/textDark"
                     android:textSize="16sp" />
+
+                <EditText
+                    android:id="@+id/edt_profile_height"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:gravity="right"
+                    android:hint="cm"
+                    android:inputType="number"
+                    android:textColor="@color/textDark"
+                    android:textSize="16sp"
+                    android:visibility="gone" />
             </LinearLayout>
 
         </LinearLayout>
