--- a/app/src/main/res/layout/item_list_workout.xml
+++ b/app/src/main/res/layout/item_list_workout.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_marginLeft="15dp"
+    android:paddingLeft="15dp"
+    android:paddingBottom="10dp"
+    android:background="@color/colorGray3"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
@@ -24,10 +26,10 @@
 
     <TextView
 
-        android:drawableLeft="@drawable/time"
         android:id="@+id/tv_workout_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="10dp"
+        android:drawableLeft="@drawable/clock_1" />
 
 </LinearLayout>
