--- a/app/src/main/res/layout/dialog_edit_food.xml
+++ b/app/src/main/res/layout/dialog_edit_food.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="@drawable/rounded_layout"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
@@ -8,7 +9,6 @@
 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
