--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -31,7 +31,7 @@
     </group>
     <item
         android:id="@+id/nav_map"
-        android:icon="@drawable/analytics"
+        android:icon="@drawable/nearby"
         android:title="Gym nearby" />
     <item android:title="Information">
         <menu>
