--- a/app/src/main/res/layout/fragment_meal.xml
+++ b/app/src/main/res/layout/fragment_meal.xml
@@ -73,8 +73,8 @@
                 android:textSize="20sp" />
 
             <TextView
+                android:layout_alignParentRight="true"
                 android:id="@+id/tv_total_breakfast"
-
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -118,7 +118,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-
+                android:layout_alignParentRight="true"
 
                 android:textColor="@color/colorBlack"
                 android:textSize="20sp" />
@@ -153,7 +153,7 @@
 
             <TextView
                 android:id="@+id/tv_total_dinner"
-
+                android:layout_alignParentRight="true"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -194,7 +194,7 @@
 
             <TextView
                 android:id="@+id/tv_total_snack"
-
+                android:layout_alignParentRight="true"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
