--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -38,11 +38,11 @@
             <item
                 android:id="@+id/nav_class"
                 android:icon="@drawable/curriculum"
-                android:title="Lap trinh huong di dong nhom 4" />
+                android:title="Lap trinh di dong nhom 4" />
             <item
                 android:id="@+id/nav_group"
                 android:icon="@drawable/information"
-                android:title="Thuc hien: Nhom 5" />
+                android:title="Thuc hien: Nhom 14" />
         </menu>
     </item>
 
