--- a/app/src/main/res/layout/fragment_listfood.xml
+++ b/app/src/main/res/layout/fragment_listfood.xml
@@ -203,11 +203,13 @@
                     android:id="@+id/bt_cancel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/colorWhite"
                     android:background="@drawable/button"
                     android:text="Cancel" />
 
                 <Button
                     android:id="@+id/bt_add"
+                    android:textColor="@color/colorWhite"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
