--- a/app/src/main/res/layout/activity_information.xml
+++ b/app/src/main/res/layout/activity_information.xml
@@ -10,12 +10,12 @@
 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="10dp"
-        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="13dp">
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="13dp"
+        android:orientation="vertical"
+        android:padding="10dp">
 
         <LinearLayout
 
@@ -29,15 +29,15 @@
         </LinearLayout>
 
         <TextView
-            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:background="@drawable/rounded_layout"
             android:drawableLeft="@drawable/card"
+            android:drawableRight="@drawable/icon_login"
             android:gravity="center_horizontal"
             android:text="Comfirm your information"
             android:textColor="@color/colorGreen"
-            android:drawableRight="@drawable/icon_login"
             android:textSize="18sp"
             android:textStyle="bold"
 
@@ -52,14 +52,14 @@
             android:paddingLeft="5dp">
 
             <TextView
-                android:drawableLeft="@drawable/weit"
                 android:id="@+id/textView"
                 android:layout_width="0dp"
                 android:layout_height="32dp"
                 android:layout_weight="1"
                 android:background="@drawable/rounded_layout"
+                android:drawableLeft="@drawable/weit"
                 android:gravity="center"
-                android:text="Weight :"
+                android:text="Weight(kg):"
                 android:textColor="@color/colorGreen"
                 android:textSize="20sp" />
 
@@ -71,7 +71,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/rounded_layout"
                 android:gravity="center"
-
+                android:inputType="number"
                 android:textColor="@color/colorOre"
                 android:textSize="20sp" />
         </LinearLayout>
@@ -80,89 +80,83 @@
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:layout_marginTop="5dp"
-
             android:background="@drawable/layout_snack"
             android:gravity="center_vertical">
 
             <TextView
-                android:layout_marginLeft="5dp"
-                android:drawableLeft="@drawable/hei"
-                android:gravity="center"
                 android:layout_width="0dp"
                 android:layout_height="32dp"
                 android:layout_gravity="center_vertical"
+                android:layout_marginLeft="5dp"
                 android:layout_weight="1"
                 android:background="@drawable/rounded_layout"
-                android:text="Height :"
+                android:drawableLeft="@drawable/hei"
+                android:gravity="center"
+                android:text="Height(cm):"
                 android:textColor="@color/colorGreen"
                 android:textSize="20sp" />
 
             <EditText
-
                 android:id="@+id/edt_init_height"
-
                 android:layout_width="0dp"
                 android:layout_height="32dp"
                 android:layout_marginRight="5dp"
                 android:layout_weight="1"
                 android:background="@drawable/rounded_layout"
                 android:gravity="center"
-
+                android:inputType="number"
                 android:textColor="@color/colorOre"
                 android:textSize="20sp" />
         </LinearLayout>
 
         <LinearLayout
-            android:background="@drawable/layout_snack"
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:layout_marginTop="5dp"
+            android:background="@drawable/layout_snack"
             android:gravity="center_vertical">
 
 
             <TextView
-                android:drawableLeft="@drawable/age"
-                android:gravity="center"
-                android:layout_marginLeft="5dp"
                 android:layout_width="0dp"
                 android:layout_height="32dp"
+                android:layout_marginLeft="5dp"
                 android:layout_weight="1"
                 android:background="@drawable/rounded_layout"
-
+                android:drawableLeft="@drawable/age"
+                android:gravity="center"
                 android:text="Age :"
                 android:textColor="@color/colorGreen"
                 android:textSize="20sp" />
-
 
             <EditText
                 android:id="@+id/edt_init_age"
                 android:layout_width="0dp"
                 android:layout_height="32dp"
+                android:layout_marginRight="5dp"
                 android:layout_weight="1"
                 android:background="@drawable/rounded_layout"
                 android:gravity="center"
                 android:inputType="number"
-
-                android:layout_marginRight="5dp"
                 android:textColor="@color/colorOre"
                 android:textSize="20sp" />
         </LinearLayout>
 
         <LinearLayout
-            android:background="@drawable/layout_snack"
-            android:layout_marginTop="5dp"
             android:layout_width="match_parent"
             android:layout_height="56dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/layout_snack"
             android:gravity="center_vertical"
             android:paddingLeft="5dp">
 
             <TextView
-                android:drawableLeft="@drawable/gender"
-                android:gravity="center"
                 android:layout_width="0dp"
                 android:layout_height="32dp"
                 android:layout_weight="1.45"
                 android:background="@drawable/rounded_layout"
+                android:drawableLeft="@drawable/gender"
+                android:gravity="center"
                 android:text="Gender :"
                 android:textColor="@color/colorGreen"
                 android:textSize="20sp" />
@@ -207,15 +201,15 @@
             android:orientation="horizontal">
 
             <Button
-                android:textSize="18sp"
                 android:id="@+id/btn_init_save"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:textStyle="bold"
                 android:background="@drawable/button"
                 android:text="Save"
-                android:textColor="@color/colorWhite" />
+                android:textColor="@color/colorWhite"
+                android:textSize="18sp"
+                android:textStyle="bold" />
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
