--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -33,12 +33,12 @@
         android:id="@+id/nav_map"
         android:icon="@drawable/nearby"
         android:title="Gym nearby" />
+    <item
+        android:id="@+id/nav_logout"
+        android:icon="@drawable/back_left"
+        android:title="Log out" />
     <item android:title="Information">
         <menu>
-            <item
-                android:id="@+id/nav_class"
-                android:icon="@drawable/curriculum"
-                android:title="Lap trinh di dong nhom 4" />
             <item
                 android:id="@+id/nav_group"
                 android:icon="@drawable/information"
