--- a/app/src/main/res/layout/fragment_listfood.xml
+++ b/app/src/main/res/layout/fragment_listfood.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.v7.widget.SearchView
         android:id="@+id/search_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/search"
-        android:queryHint="Search here">
+        android:background="@drawable/search">
+
 
     </android.support.v7.widget.SearchView>
 
@@ -21,8 +22,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
             android:background="@color/colorWhite"
             android:orientation="vertical">
 
