--- a/app/src/main/res/layout/fragment_meal_detail.xml
+++ b/app/src/main/res/layout/fragment_meal_detail.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
+
         android:orientation="vertical">
 
         <LinearLayout
@@ -33,8 +30,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:gravity="center"
-
-
                 android:textColor="@color/colorGreen"
                 android:textSize="20sp" />
 
@@ -57,7 +52,6 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="150dp"
-
                 android:text="Total :"
                 android:textColor="@color/colorOre"
                 android:textSize="18sp"
@@ -67,17 +61,12 @@
                 android:id="@+id/tv_total_calo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-
                 android:textColor="@color/colorOre" />
 
             <TextView
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
                 android:text=" Calories "
                 android:textColor="@color/colorOre" />
 
@@ -85,6 +74,7 @@
         </LinearLayout>
 
         <RelativeLayout
+            android:paddingTop="5dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
