--- a/app/src/main/res/layout/fragment_statistic.xml
+++ b/app/src/main/res/layout/fragment_statistic.xml
@@ -4,15 +4,10 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:background="@color/colorWhite"
-        android:orientation="vertical"
-        android:weightSum="1">
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -33,8 +28,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:gravity="center"
-
-
                 android:textColor="@color/colorGreen"
                 android:textSize="20sp" />
 
@@ -44,28 +37,23 @@
                 android:layout_height="24dp"
                 android:layout_weight="0.5"
                 android:src="@drawable/back_right" />
-
-
         </LinearLayout>
 
 
         <LinearLayout
             android:layout_width="match_parent"
-
             android:layout_height="39dp"
             android:layout_marginTop="5dp"
             android:background="@color/colorGreen"
             android:gravity="center_vertical">
 
             <ImageView
-
                 android:layout_width="0dp"
                 android:layout_height="32dp"
                 android:layout_weight="0.25"
                 android:src="@drawable/cacu" />
 
             <TextView
-
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
@@ -75,7 +63,6 @@
                 android:textStyle="bold" />
 
             <TextView
-
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -221,6 +208,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:text="="
+                    android:textStyle="bold"
                     android:textColor="@color/colorBlack"
                     android:textSize="20sp" />
 
@@ -259,12 +247,10 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-
             android:layout_height="39dp"
             android:layout_marginTop="5dp"
             android:background="@color/colorGreen"
-            android:gravity="center_vertical"
-            android:paddingTop="10dp">
+            android:gravity="center_vertical">
 
             <ImageView
 
@@ -496,18 +482,16 @@
         <LinearLayout
             android:id="@+id/layout_listfood"
             android:layout_width="match_parent"
-            android:layout_height="37dp"
-            android:layout_marginTop="15dp"
+            android:layout_height="39dp"
+            android:layout_marginTop="5dp"
             android:background="@color/colorGreen"
-            android:gravity="center"
-            android:paddingTop="10dp">
+            android:gravity="center">
 
             <ImageView
                 android:id="@+id/iv_list_food"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.25"
-                android:gravity="center"
                 android:src="@drawable/athlete" />
 
             <TextView
@@ -540,24 +524,20 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
                 android:background="@color/colorWhite"
                 android:orientation="vertical">
 
                 //code in here
 
                 <RelativeLayout
+                    android:paddingTop="5dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
                     <ListView
                         android:id="@+id/lv_statistic_list_exercise"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentTop="true">
+                        android:layout_height="match_parent">
 
                     </ListView>
                 </RelativeLayout>
